--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1,15 +1,16 @@
 chart:
   # when helm is a tgz
-  url: https://github.com/krateoplatformops/krateo-v2-template-fireworksapp/releases/download/0.1.0/fireworks-app-0.1.0.tgz
+  # url: https://github.com/krateoplatformops/krateo-v2-template-fireworksapp/releases/download/0.1.0/fireworks-app-0.1.0.tgz
 
   # when helm is a OCI image
   # url: oci://registry-1.docker.io/bitnamicharts/postgresql
   # version: "12.8.3"
 
   # when helm is in a registry
-  # url: https://charts.bitnami.com/bitnami
-  # version: "12.8.3"
-  # repo: postgresql
+  url: https://charts.krateo.io
+  version: "1.0.11"
+  repo: fireworks-app
+
 
   # insecureSkipVerifyTLS: true
 
