feat: add card and form to chart

--- a/chart/templates/compositiondefinition.yaml
+++ b/chart/templates/compositiondefinition.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.krateo.io/v1alpha1
 kind: CompositionDefinition
 metadata:
-  name: compositiondefinition-{{ .Release.Name }}-{{ .Release.Namespace }}
+  name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 spec:
   {{- with .Values.chart }}
